# sz0mtify-dashboard

./: .dockerignore  .env.example  .gitignore  AGENTS.md  LICENSE  PKGBUILD  README.md  docker-compose.yml
.github/workflows/: ci.yml  macos-dmg.yml
backend/: Cargo.toml  Dockerfile
backend/migrations/: 20260509160000_init.sql  20260510153000_discovery_cache_fields.sql  20260513120000_track_artist_credits.sql  20260516120000_app_sessions.sql  20260526100000_navidrome_scan_state.sql
backend/src/: auth.rs  main.rs
backend/src/api/: handlers.rs
backend/src/db/: mod.rs
backend/src/services/: analytics.rs  discovery.rs  lastfm.rs  mod.rs  recommendation.rs  settings.rs  sync.rs
backend/src/utils/: artists.rs  matching.rs  mod.rs
docs/: technical-overview.md
frontend/: Dockerfile  capacitor.config.ts  docker-entrypoint.sh  eslint.config.js  nginx.conf  package-lock.json  package.json  stylelint.config.js  svelte.config.js  vite.config.ts
frontend/scripts/: patch-capacitor-ios-plugins.mjs  patch-linuxdeploy-gtk.mjs
frontend/src/: app.css  app.html  app.scss
frontend/src-tauri/: tauri.conf.json
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/lib/: api.ts  auth.ts  format.ts  imageCache.ts  localMedia.ts  mobileNetwork.ts  navigation.ts  player.ts  swipeQueue.ts  theme.ts  types.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/scss/: _base.scss  _cards.scss  _controls.scss  _details.scss  _mixins.scss  _mobile.scss  _player.scss  _sidebar.scss  _tables.scss  _topbar.scss  _variables.scss
frontend/static/: config.js
(+49 files in other folders)
